[gd_scene load_steps=6 format=3 uid="uid://cccvvm7ikul2e"]

[ext_resource type="Script" uid="uid://cbq6iy27hhjar" path="res://scenes/ui scenes/main menu/main_menu.gd" id="1_3kebp"]
[ext_resource type="AudioStream" uid="uid://cfbvibujdsmi1" path="res://assets/sounds/ui/main menu/hoverSFX.ogg" id="2_tjq3j"]
[ext_resource type="StyleBox" uid="uid://ccklq6jjabqq2" path="res://assets/tres/buttons/button.tres" id="3_eqqcm"]
[ext_resource type="StyleBox" uid="uid://c1lvkim3hx1ac" path="res://assets/tres/buttons/button-disabled.tres" id="3_ibxfk"]
[ext_resource type="StyleBox" uid="uid://bnmk0ug8dy1dk" path="res://assets/tres/buttons/button-hover.tres" id="4_i6myr"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3kebp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -260.0
offset_right = 160.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Play" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("3_eqqcm")
theme_override_styles/disabled = ExtResource("3_ibxfk")
theme_override_styles/hover_pressed = ExtResource("4_i6myr")
theme_override_styles/hover = ExtResource("4_i6myr")
theme_override_styles/pressed = ExtResource("3_eqqcm")
theme_override_styles/normal = ExtResource("3_eqqcm")
text = "Play"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("3_eqqcm")
theme_override_styles/disabled = ExtResource("3_ibxfk")
theme_override_styles/hover_pressed = ExtResource("4_i6myr")
theme_override_styles/hover = ExtResource("4_i6myr")
theme_override_styles/pressed = ExtResource("3_eqqcm")
theme_override_styles/normal = ExtResource("3_eqqcm")
text = "Quit"

[node name="Settings" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("3_eqqcm")
theme_override_styles/disabled = ExtResource("3_ibxfk")
theme_override_styles/hover_pressed = ExtResource("4_i6myr")
theme_override_styles/hover = ExtResource("4_i6myr")
theme_override_styles/pressed = ExtResource("3_eqqcm")
theme_override_styles/normal = ExtResource("3_eqqcm")
text = "Settings"

[node name="1080P" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("3_eqqcm")
theme_override_styles/disabled = ExtResource("3_ibxfk")
theme_override_styles/hover_pressed = ExtResource("4_i6myr")
theme_override_styles/hover = ExtResource("4_i6myr")
theme_override_styles/pressed = ExtResource("3_eqqcm")
theme_override_styles/normal = ExtResource("3_eqqcm")
text = "1080p Resolution"

[node name="720P" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("3_eqqcm")
theme_override_styles/disabled = ExtResource("3_ibxfk")
theme_override_styles/hover_pressed = ExtResource("4_i6myr")
theme_override_styles/hover = ExtResource("4_i6myr")
theme_override_styles/pressed = ExtResource("3_eqqcm")
theme_override_styles/normal = ExtResource("3_eqqcm")
text = "720p Resolution"

[node name="1152x648" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("3_eqqcm")
theme_override_styles/disabled = ExtResource("3_ibxfk")
theme_override_styles/hover_pressed = ExtResource("4_i6myr")
theme_override_styles/hover = ExtResource("4_i6myr")
theme_override_styles/pressed = ExtResource("3_eqqcm")
theme_override_styles/normal = ExtResource("3_eqqcm")
text = "1152x648 Resolution"

[node name="hoverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_tjq3j")
volume_db = 1.0

[connection signal="mouse_entered" from="VBoxContainer/Play" to="." method="hovered"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="." method="hovered"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Settings" to="." method="hovered"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/1080P" to="." method="hovered"]
[connection signal="pressed" from="VBoxContainer/1080P" to="." method="_on_ten_eighty_p_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/720P" to="." method="hovered"]
[connection signal="pressed" from="VBoxContainer/720P" to="." method="_on_seven_twenty_p_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/1152x648" to="." method="hovered"]
[connection signal="pressed" from="VBoxContainer/1152x648" to="." method="_on_eleven_fifty_two_six_forty_eight_pressed"]
